Removed unneeded console.log from dateUtils. Refactored refactored displaySize util function name and added more JsDoc. And abstracted list-table-row padding in css.

--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewSidebarTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewSidebarTableAndRows.scss
@@ -67,7 +67,7 @@
 
 	.list-sidebar__table__row {
 		border-bottom: 1px solid v.$mode-list-row-border-color-light;
-		padding: 5px;
+		padding: v.$list-row-padding;
 		height: v.$list-row-height;
 		text-align: center;
 	}
