--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -553,6 +553,7 @@ $account-sidebar-padding-top: 32px;
 $account-sidebar-padding-left-right: 18px;
 $top-bar-search-bar-padding: 8px;
 $create-item-sidebar-padding: 6px;
+$list-row-padding: 0px 5px;
 $edit-item-name-input-padding: 4px;
 
 //======
