--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
@@ -28,7 +28,7 @@
 		@include m.stop-text-selection();
 		
 		border-bottom: 1px solid v.$mode-list-row-border-color-light;
-		padding: 5px;
+		padding: v.$list-row-padding;
 		height: v.$list-row-height;
 		text-align: center;
 	}
